# weather-api-airflow

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
dags/: dags.py  scripts.py  sensors.py  tasks.py
dags/config/: __init__.py  config.py  infra.py  queries.py  static_data.py  utils.py
dags/config/soda/: configuration.yml
dags/scripts/: sensors.py  tasks.py
tests/: test.py  test_empty.py
